@@ -48,12 +48,12 @@
         <table class="listing" id="attributelist">
           <thead>
             <tr>
-              <th>&nbsp;</th>
+              <th class="sel">&nbsp;</th>
               <th colspan="3">Account</th>
             </tr>
             <tr>
-              <th>&nbsp;</th>
-              <th>&nbsp;</th>
+              <th class="sel">&nbsp;</th>
+              <th class="sel">&nbsp;</th>
               <th>Attribute</th>
               <th>Value</th>
             </tr>
